# oz_django

./: pyproject.toml
.github/workflows/: ci.yml
oz_django/: settings.py  urls.py
tabom/: models.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py
tabom/service/: like_service.py
tabom/test/: test_like_service.py
