[tool.poetry]
name = "oz-django"
version = "0.1.0"
description = ""
authors = ["shinbilee <dltlsql8389@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pymysql = "^1.1.1"
cryptography = "^44.0.1"
testcase = "^0.1.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
django-stubs = "^5.1.3"
types-pymysql = "^1.1.0.20241103"
coverage = "^7.6.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "manage"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "oz_django.settings"